<resources>
    <string name="app_name">randomMovie</string>
    <string name="list">List</string>
    <string name="movie">Movie</string>
    <string name="settings">Settings</string>
    <string name="next_movie">Next Movie</string>
    <string name="year_with_ints">Year: %1$d – %2$d</string>
    <string name="rating_with_dots">Rating:</string>
    <string name="choose_genres">Choose genres</string>
    <string name="choose_countries">Choose countries</string>
    <string name="order">Order:</string>
    <string name="type">Type:</string>
    <string name="rate">Rate</string>
    <string name="delete">Delete</string>
    <string name="reverse">Reverse Sorting</string>
    <string name="order_by">Order list by</string>
    <string name="kinopoisk_logo">kinopoisk logo</string>
    <string name="imdb_logo">imdb logo</string>
    <string name="rate_movie">rate movie</string>
    <string name="more_info">more info</string>
    <string name="start_title">Let\'s start!\n Press the button</string>
    <string name="kinopoisk_link">Kinopoisk link</string>
    <string name="imdb_link">Imdb link</string>
    <string name="movie_poster">Movie poster</string>
    <string name="retry">Retry</string>
    <string name="questionMark">\?</string>
    <string name="movie_in_watchlist">Movie in Watchlist</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="rate_this">Rate this</string>
    <string name="default_button">Default</string>
    <string name="watchlist">Watchlist (%1$d)</string>
    <string name="rated">Rated (%1$d)</string>
    <string name="movie_with_year">"%1$s (%2$s)"</string>
    <string name="create_account"><u>Create Account</u> </string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authorization">Authorization</string>
    <string name="as_guest">as Guest</string>
    <string name="filter">Filter</string>
    <string name="api_settings">API Settings</string>
    <string name="token">Token:</string>
    <string name="create_personal_token">Create personal token</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_exist">Already exist</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="personal_token">Personal token</string>
    <string name="code">Code</string>
    <string name="verification">Verification</string>
    <string name="code_has_been_sent_to_your_inbox">Code has been sent to your inbox</string>
    <string name="confirm">Confirm</string>
    <string name="choose">Choose</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="minutes">%1$d min</string>
    <string name="token_info">Tokens are designed for 500 requests per day.\n Every day, 500 requests are updated.\n For personal tokens, the rule is the same.</string>

    <string-array name="orderFilter">
        <item>Popular</item>
        <item>Rated</item>
        <item>Hidden gem</item>
    </string-array>

    <string-array name="type">
        <item>Movie</item>
        <item>Series</item>
        <item>All</item>
    </string-array>

    <string-array name="orderList">
        <item>Queue</item>
        <item>Alphabet</item>
        <item>Rating</item>
        <item>Year</item>
        <item>User Rating</item>
    </string-array>

</resources>