<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screen.tabs.settings.SettingsFragment">



    <TextView
        android:id="@+id/apiSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tokenSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Spinner
        android:id="@+id/tokenSpinner"
        android:theme="@style/spinnerItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18sp"
        android:paddingVertical="12dp"
        app:layout_constraintStart_toEndOf="@id/tokenTextView"
        app:layout_constraintTop_toBottomOf="@id/apiSettingsTextView"
        app:layout_constraintBottom_toTopOf="@id/createTokenButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:entries="@array/orderFilter"
        />
    <TextView
        android:id="@+id/tokenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="@id/tokenSpinner"
        app:layout_constraintBottom_toBottomOf="@id/tokenSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tokenSpinner"
        />

    <Button
        android:id="@+id/createTokenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_personal_token"
        app:layout_constraintTop_toBottomOf="@id/tokenSpinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>