<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.movie.MovieFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"  />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"  />

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/titleMainTextView"
        app:layout_constraintDimensionRatio="W,1:0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:layout_constraintVertical_chainStyle="packed"
        android:translationZ="1dp"
        android:contentDescription="@string/movie_poster" />
    <ProgressBar
        android:id="@+id/posterProgressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/posterImageView"
        app:layout_constraintEnd_toEndOf="@id/posterImageView"
        app:layout_constraintTop_toTopOf="@id/posterImageView"
        app:layout_constraintBottom_toBottomOf="@id/posterImageView"
        />

    <TextView
        android:id="@+id/titleMainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/titleExtraTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posterImageView" />

    <TextView
        android:id="@+id/titleExtraTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/genresTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleMainTextView"

        />

    <TextView
        android:id="@+id/genresTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/kinopoiskImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleExtraTextView" />


    <ImageView
        android:id="@+id/kinopoiskImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kinopoisk_logo"
        android:src="@drawable/logo_kinopoisk"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@id/kinopoiskRateTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genresTextView" />

    <TextView
        android:id="@+id/kinopoiskRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/kinopoiskImageView"
        app:layout_constraintEnd_toEndOf="@id/centerGuideline"
        app:layout_constraintStart_toEndOf="@id/kinopoiskImageView"
        app:layout_constraintTop_toTopOf="@id/kinopoiskImageView" />

    <ImageView
        android:id="@+id/imdbImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imdb_logo"
        android:src="@drawable/logo_imdb"
        app:layout_constraintBottom_toBottomOf="@id/kinopoiskImageView"
        app:layout_constraintEnd_toStartOf="@id/imdbRateTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/centerGuideline"
        app:layout_constraintTop_toTopOf="@id/kinopoiskImageView" />

    <TextView
        android:id="@+id/imdbRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/kinopoiskImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imdbImageView"
        app:layout_constraintTop_toTopOf="@id/kinopoiskImageView" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/actionsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="starButton,nextMovieButton,moreButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="@style/secondaryActionButton"
        app:fabCustomSize="48dp"
        android:contentDescription="@string/rate_movie"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/nextMovieButton"
        app:layout_constraintEnd_toStartOf="@id/nextMovieButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nextMovieButton"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextMovieButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        style="@style/mainActionButton"
        app:maxImageSize="32dp"
        app:fabCustomSize="64dp"
        android:contentDescription="@string/next_movie"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/moreButton"
        app:layout_constraintStart_toEndOf="@id/starButton"
        app:layout_constraintTop_toBottomOf="@id/bottomGuideline"
        app:tint="@android:color/white"
         />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/moreButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="@style/secondaryActionButton"
        android:contentDescription="@string/more_info"
        android:src="@drawable/ic_more_horizontal"
        app:maxImageSize="32dp"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="@id/nextMovieButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nextMovieButton"
        app:layout_constraintTop_toTopOf="@id/nextMovieButton"
         />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottomGuideline" />

    <androidx.constraintlayout.widget.Group
        android:visibility="invisible"
        android:id="@+id/movieGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:constraint_referenced_ids="posterImageView,titleMainTextView,titleExtraTextView,genresTextView,kinopoiskImageView,imdbImageView,imdbRateTextView,kinopoiskRateTextView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/extraActionsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="starButton,moreButton" />
    <TextView
        android:visibility="invisible"
        android:id="@+id/startTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="26sp"
        android:text="@string/start_title"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>