<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@android:drawable/editbox_background"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:0.7"
        app:layout_constraintEnd_toStartOf="@id/titleMainTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/movie_poster" />

    <TextView
        android:id="@+id/titleMainTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="middle"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/titleExtraTextView"
        app:layout_constraintEnd_toStartOf="@id/moreButton"
        app:layout_constraintStart_toEndOf="@id/posterImageView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/titleExtraTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@id/countryTextView"
        app:layout_constraintEnd_toEndOf="@id/titleMainTextView"
        app:layout_constraintStart_toStartOf="@id/titleMainTextView"
        app:layout_constraintTop_toBottomOf="@id/titleMainTextView"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/moreButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="6dp"
        style="@style/secondaryActionButton"
        android:src="@drawable/ic_more_vertical"
        app:fabCustomSize="42dp"
        app:maxImageSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleMainTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/more_info" />
    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@id/genresTextView"
        app:layout_constraintEnd_toStartOf="@id/ratingTextView"
        app:layout_constraintStart_toStartOf="@id/titleMainTextView"
        app:layout_constraintTop_toBottomOf="@id/titleExtraTextView"
        />

    <TextView
        android:id="@+id/genresTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/countryTextView"
        app:layout_constraintStart_toStartOf="@id/titleMainTextView"
        app:layout_constraintTop_toBottomOf="@id/countryTextView" />
    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toTopOf="@id/countryTextView"
        app:layout_constraintBottom_toBottomOf="@id/genresTextView"
        app:layout_constraintStart_toEndOf="@id/countryTextView"
        app:layout_constraintEnd_toStartOf="@id/yourRatingTextView"
        />

    <TextView
        android:id="@+id/yourRatingTextView"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:text="@string/questionMark"
        style="@style/userRatingTextView"
        app:layout_constraintTop_toTopOf="@id/countryTextView"
        app:layout_constraintBottom_toBottomOf="@id/genresTextView"
        app:layout_constraintStart_toStartOf="@id/moreButton"
        app:layout_constraintEnd_toEndOf="@id/moreButton"

        />
    <ImageView
        android:visibility="invisible"
        android:id="@+id/bookmarkImageView"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintTop_toTopOf="@id/countryTextView"
        app:layout_constraintBottom_toBottomOf="@id/genresTextView"
        app:layout_constraintStart_toStartOf="@id/moreButton"
        app:layout_constraintEnd_toEndOf="@id/moreButton"
        android:contentDescription="@string/movie_in_watchlist" />

</androidx.constraintlayout.widget.ConstraintLayout>